cmake_minimum_required(VERSION 3.12)
project(os161_1_99 C)

set(CMAKE_C_STANDARD 11)

include_directories(kern/include)
include_directories(kern/include/kern)
include_directories(kern/arch/mips/include)
include_directories(kern/arch/mips/include/kern/)
include_directories(kern/arch/mips/thread)
include_directories(kern/arch/sys161/include)
include_directories(kern/dev/generic)
include_directories(kern/dev/lamebus)
include_directories(build)
include_directories(build/install)
include_directories(build/install/hostinclude)
include_directories(build/install/hostinclude/kern)
include_directories(build/install/hostinclude/kern/machine)
include_directories(build/install/hostinclude/kern/mips)
include_directories(build/install/include)
include_directories(build/install/include/kern)
include_directories(build/install/include/kern/machine)
include_directories(build/install/include/kern/mips)
include_directories(build/install/include/machine)
include_directories(build/install/include/sys)
include_directories(build/install/include/types)
include_directories(common/gcc-millicode)
include_directories(user/include)
include_directories(user/include/sys)
include_directories(user/include/types)
include_directories(user/lib/hostcompat)
include_directories(user/sbin/mksfs)
include_directories(user/testbin/badcall)
include_directories(user/testbin/f_test)
include_directories(user/testbin/randcall)
include_directories(user/testbin/triplehuge)
include_directories(user/testbin/triplemat)
include_directories(user/testbin/triplesort)
include_directories(user/uw-testbin/lib)

function(asstx x)
    include_directories(kern/compile/ASST${x})
    include_directories(kern/compile/ASST${x}/includelinks)
endfunction(asstx)

asstx(0)
asstx(1)
asstx(2)
asstx(3)

add_executable(os161_1_99
        build/install/hostinclude/kern/mips/endian.h
        build/install/hostinclude/kern/mips/regdefs.h
        build/install/hostinclude/kern/mips/setjmp.h
        build/install/hostinclude/kern/mips/signal.h
        build/install/hostinclude/kern/mips/types.h
        build/install/hostinclude/hostcompat.h
        build/install/include/kern/mips/endian.h
        build/install/include/kern/mips/regdefs.h
        build/install/include/kern/mips/setjmp.h
        build/install/include/kern/mips/signal.h
        build/install/include/kern/mips/types.h
        build/install/include/kern/endian.h
        build/install/include/kern/errmsg.h
        build/install/include/kern/errno.h
        build/install/include/kern/fcntl.h
        build/install/include/kern/ioctl.h
        build/install/include/kern/iovec.h
        build/install/include/kern/limits.h
        build/install/include/kern/reboot.h
        build/install/include/kern/resource.h
        build/install/include/kern/seek.h
        build/install/include/kern/sfs.h
        build/install/include/kern/signal.h
        build/install/include/kern/socket.h
        build/install/include/kern/stat.h
        build/install/include/kern/stattypes.h
        build/install/include/kern/syscall.h
        build/install/include/kern/time.h
        build/install/include/kern/types.h
        build/install/include/kern/unistd.h
        build/install/include/kern/wait.h
        build/install/include/sys/endian.h
        build/install/include/sys/ioctl.h
        build/install/include/sys/null.h
        build/install/include/sys/reboot.h
        build/install/include/sys/stat.h
        build/install/include/sys/types.h
        build/install/include/sys/wait.h
        build/install/include/types/size_t.h
        build/install/include/assert.h
        build/install/include/err.h
        build/install/include/errno.h
        build/install/include/fcntl.h
        build/install/include/limits.h
        build/install/include/setjmp.h
        build/install/include/signal.h
        build/install/include/stdarg.h
        build/install/include/stdint.h
        build/install/include/stdio.h
        build/install/include/stdlib.h
        build/install/include/string.h
        build/install/include/time.h
        build/install/include/unistd.h
        common/gcc-millicode/adddi3.c
        common/gcc-millicode/anddi3.c
        common/gcc-millicode/ashldi3.c
        common/gcc-millicode/ashrdi3.c
        common/gcc-millicode/cmpdi2.c
        common/gcc-millicode/divdi3.c
        common/gcc-millicode/iordi3.c
        common/gcc-millicode/longlong.h
        common/gcc-millicode/lshldi3.c
        common/gcc-millicode/lshrdi3.c
        common/gcc-millicode/moddi3.c
        common/gcc-millicode/muldi3.c
        common/gcc-millicode/negdi2.c
        common/gcc-millicode/notdi2.c
        common/gcc-millicode/qdivrem.c
        common/gcc-millicode/subdi3.c
        common/gcc-millicode/ucmpdi2.c
        common/gcc-millicode/udivdi3.c
        common/gcc-millicode/umoddi3.c
        common/gcc-millicode/xordi3.c
        common/libc/printf/__printf.c
        common/libc/printf/snprintf.c
        common/libc/stdlib/atoi.c
        common/libc/string/bzero.c
        common/libc/string/memcpy.c
        common/libc/string/memmove.c
        common/libc/string/strcat.c
        common/libc/string/strchr.c
        common/libc/string/strcmp.c
        common/libc/string/strcpy.c
        common/libc/string/strlen.c
        common/libc/string/strrchr.c
        common/libc/string/strtok_r.c
        kern/arch/mips/include/kern/endian.h
        kern/arch/mips/include/kern/regdefs.h
        kern/arch/mips/include/kern/setjmp.h
        kern/arch/mips/include/kern/signal.h
        kern/arch/mips/include/kern/types.h
        kern/arch/mips/include/current.h
        kern/arch/mips/include/elf.h
        kern/arch/mips/include/specialreg.h
        kern/arch/mips/include/spinlock.h
        kern/arch/mips/include/thread.h
        kern/arch/mips/include/tlb.h
        kern/arch/mips/include/trapframe.h
        kern/arch/mips/include/types.h
        kern/arch/mips/include/vm.h
        kern/arch/mips/locore/trap.c
        kern/arch/mips/syscall/syscall.c
        kern/arch/mips/thread/cpu.c
        kern/arch/mips/thread/switchframe.c
        kern/arch/mips/thread/switchframe.h
        kern/arch/mips/thread/thread_machdep.c
        kern/arch/mips/vm/dumbvm.c
        kern/arch/mips/vm/ram.c
        kern/arch/sys161/dev/lamebus_machdep.c
        kern/arch/sys161/include/bus.h
        kern/arch/sys161/include/maxcpus.h
        kern/compile/ASST0/includelinks/machine/kern/endian.h
        kern/compile/ASST0/includelinks/machine/kern/regdefs.h
        kern/compile/ASST0/includelinks/machine/kern/setjmp.h
        kern/compile/ASST0/includelinks/machine/kern/signal.h
        kern/compile/ASST0/includelinks/machine/kern/types.h
        kern/compile/ASST0/includelinks/mips/kern/endian.h
        kern/compile/ASST0/includelinks/mips/kern/regdefs.h
        kern/compile/ASST0/includelinks/mips/kern/setjmp.h
        kern/compile/ASST0/includelinks/mips/kern/signal.h
        kern/compile/ASST0/includelinks/mips/kern/types.h
        kern/compile/ASST0/autoconf.c
        kern/compile/ASST0/autoconf.h
        kern/compile/ASST0/opt-A0.h
        kern/compile/ASST0/opt-A1.h
        kern/compile/ASST0/opt-A2.h
        kern/compile/ASST0/opt-A3.h
        kern/compile/ASST0/opt-A4.h
        kern/compile/ASST0/opt-A5.h
        kern/compile/ASST0/opt-dumbvm.h
        kern/compile/ASST0/opt-net.h
        kern/compile/ASST0/opt-netfs.h
        kern/compile/ASST0/opt-noasserts.h
        kern/compile/ASST0/opt-sfs.h
        kern/compile/ASST0/opt-synchprobs.h
        kern/compile/ASST0/vers.c
        kern/compile/ASST1/includelinks/machine/kern/endian.h
        kern/compile/ASST1/includelinks/machine/kern/regdefs.h
        kern/compile/ASST1/includelinks/machine/kern/setjmp.h
        kern/compile/ASST1/includelinks/machine/kern/signal.h
        kern/compile/ASST1/includelinks/machine/kern/types.h
        kern/compile/ASST1/includelinks/mips/kern/endian.h
        kern/compile/ASST1/includelinks/mips/kern/regdefs.h
        kern/compile/ASST1/includelinks/mips/kern/setjmp.h
        kern/compile/ASST1/includelinks/mips/kern/signal.h
        kern/compile/ASST1/includelinks/mips/kern/types.h
        kern/compile/ASST1/autoconf.c
        kern/compile/ASST1/autoconf.h
        kern/compile/ASST1/opt-A0.h
        kern/compile/ASST1/opt-A1.h
        kern/compile/ASST1/opt-A2.h
        kern/compile/ASST1/opt-A3.h
        kern/compile/ASST1/opt-A4.h
        kern/compile/ASST1/opt-A5.h
        kern/compile/ASST1/opt-dumbvm.h
        kern/compile/ASST1/opt-net.h
        kern/compile/ASST1/opt-netfs.h
        kern/compile/ASST1/opt-noasserts.h
        kern/compile/ASST1/opt-sfs.h
        kern/compile/ASST1/opt-synchprobs.h
        kern/compile/ASST1/vers.c
        kern/dev/generic/beep.c
        kern/dev/generic/beep.h
        kern/dev/generic/console.c
        kern/dev/generic/console.h
        kern/dev/generic/random.c
        kern/dev/generic/random.h
        kern/dev/generic/rtclock.c
        kern/dev/generic/rtclock.h
        kern/dev/lamebus/beep_ltimer.c
        kern/dev/lamebus/con_lscreen.c
        kern/dev/lamebus/con_lser.c
        kern/dev/lamebus/emu.c
        kern/dev/lamebus/emu.h
        kern/dev/lamebus/emu_att.c
        kern/dev/lamebus/lamebus.c
        kern/dev/lamebus/lamebus.h
        kern/dev/lamebus/lhd.c
        kern/dev/lamebus/lhd.h
        kern/dev/lamebus/lhd_att.c
        kern/dev/lamebus/lnet.c
        kern/dev/lamebus/lnet_att.c
        kern/dev/lamebus/lrandom.c
        kern/dev/lamebus/lrandom.h
        kern/dev/lamebus/lrandom_att.c
        kern/dev/lamebus/lscreen.c
        kern/dev/lamebus/lscreen.h
        kern/dev/lamebus/lscreen_att.c
        kern/dev/lamebus/lser.c
        kern/dev/lamebus/lser.h
        kern/dev/lamebus/lser_att.c
        kern/dev/lamebus/ltimer.c
        kern/dev/lamebus/ltimer.h
        kern/dev/lamebus/ltimer_att.c
        kern/dev/lamebus/ltrace.c
        kern/dev/lamebus/ltrace.h
        kern/dev/lamebus/ltrace_att.c
        kern/dev/lamebus/random_lrandom.c
        kern/dev/lamebus/rtclock_ltimer.c
        kern/fs/sfs/sfs_fs.c
        kern/fs/sfs/sfs_io.c
        kern/fs/sfs/sfs_vnode.c
        kern/include/kern/endian.h
        kern/include/kern/errmsg.h
        kern/include/kern/errno.h
        kern/include/kern/fcntl.h
        kern/include/kern/ioctl.h
        kern/include/kern/iovec.h
        kern/include/kern/limits.h
        kern/include/kern/reboot.h
        kern/include/kern/resource.h
        kern/include/kern/seek.h
        kern/include/kern/sfs.h
        kern/include/kern/signal.h
        kern/include/kern/socket.h
        kern/include/kern/stat.h
        kern/include/kern/stattypes.h
        kern/include/kern/syscall.h
        kern/include/kern/time.h
        kern/include/kern/types.h
        kern/include/kern/unistd.h
        kern/include/kern/wait.h
        kern/include/addrspace.h
        kern/include/array.h
        kern/include/bitmap.h
        kern/include/cdefs.h
        kern/include/clock.h
        kern/include/copyinout.h
        kern/include/cpu.h
        kern/include/current.h
        kern/include/device.h
        kern/include/elf.h
        kern/include/emufs.h
        kern/include/endian.h
        kern/include/fs.h
        kern/include/lib.h
        kern/include/limits.h
        kern/include/mainbus.h
        kern/include/proc.h
        kern/include/queue.h
        kern/include/setjmp.h
        kern/include/sfs.h
        kern/include/signal.h
        kern/include/spinlock.h
        kern/include/spl.h
        kern/include/stat.h
        kern/include/stdarg.h
        kern/include/synch.h
        kern/include/synchprobs.h
        kern/include/syscall.h
        kern/include/test.h
        kern/include/thread.h
        kern/include/threadlist.h
        kern/include/threadprivate.h
        kern/include/types.h
        kern/include/uio.h
        kern/include/uw-vmstats.h
        kern/include/version.h
        kern/include/vfs.h
        kern/include/vm.h
        kern/include/vnode.h
        kern/include/wchan.h
        kern/lib/array.c
        kern/lib/bitmap.c
        kern/lib/bswap.c
        kern/lib/kgets.c
        kern/lib/kprintf.c
        kern/lib/misc.c
        kern/lib/queue.c
        kern/lib/uio.c
        kern/proc/proc.c
        kern/startup/main.c
        kern/startup/menu.c
        kern/synchprobs/catmouse.c
        kern/synchprobs/catmouse_synch.c
        kern/synchprobs/traffic.c
        kern/synchprobs/traffic_synch.c
        kern/synchprobs/whalemating.c
        kern/syscall/file_syscalls.c
        kern/syscall/loadelf.c
        kern/syscall/proc_syscalls.c
        kern/syscall/runprogram.c
        kern/syscall/time_syscalls.c
        kern/test/arraytest.c
        kern/test/bitmaptest.c
        kern/test/fstest.c
        kern/test/malloctest.c
        kern/test/nettest.c
        kern/test/synchtest.c
        kern/test/threadtest.c
        kern/test/tt3.c
        kern/test/uw-tests.c
        kern/thread/clock.c
        kern/thread/spinlock.c
        kern/thread/spl.c
        kern/thread/synch.c
        kern/thread/thread.c
        kern/thread/threadlist.c
        kern/vfs/device.c
        kern/vfs/devnull.c
        kern/vfs/vfscwd.c
        kern/vfs/vfslist.c
        kern/vfs/vfslookup.c
        kern/vfs/vfspath.c
        kern/vfs/vnode.c
        kern/vm/copyinout.c
        kern/vm/kmalloc.c
        kern/vm/uw-vmstats.c
        user/bin/cat/cat.c
        user/bin/cp/cp.c
        user/bin/false/false.c
        user/bin/ln/ln.c
        user/bin/ls/ls.c
        user/bin/mkdir/mkdir.c
        user/bin/mv/mv.c
        user/bin/pwd/pwd.c
        user/bin/rm/rm.c
        user/bin/rmdir/rmdir.c
        user/bin/sh/sh.c
        user/bin/sync/sync.c
        user/bin/true/true.c
        user/include/sys/endian.h
        user/include/sys/ioctl.h
        user/include/sys/null.h
        user/include/sys/reboot.h
        user/include/sys/stat.h
        user/include/sys/types.h
        user/include/sys/wait.h
        user/include/types/size_t.h
        user/include/assert.h
        user/include/err.h
        user/include/errno.h
        user/include/fcntl.h
        user/include/limits.h
        user/include/setjmp.h
        user/include/signal.h
        user/include/stdarg.h
        user/include/stdint.h
        user/include/stdio.h
        user/include/stdlib.h
        user/include/string.h
        user/include/time.h
        user/include/unistd.h
        user/lib/hostcompat/err.c
        user/lib/hostcompat/host-err.h
        user/lib/hostcompat/hostcompat.c
        user/lib/hostcompat/hostcompat.h
        user/lib/hostcompat/time.c
        user/lib/libc/stdio/__puts.c
        user/lib/libc/stdio/getchar.c
        user/lib/libc/stdio/printf.c
        user/lib/libc/stdio/putchar.c
        user/lib/libc/stdio/puts.c
        user/lib/libc/stdlib/abort.c
        user/lib/libc/stdlib/exit.c
        user/lib/libc/stdlib/malloc.c
        user/lib/libc/stdlib/random.c
        user/lib/libc/stdlib/system.c
        user/lib/libc/string/memcmp.c
        user/lib/libc/string/memset.c
        user/lib/libc/string/strerror.c
        user/lib/libc/string/strtok.c
        user/lib/libc/time/time.c
        user/lib/libc/unix/__assert.c
        user/lib/libc/unix/err.c
        user/lib/libc/unix/errno.c
        user/lib/libc/unix/getcwd.c
        user/my-testbin/example/example.c
        user/sbin/dumpsfs/dumpsfs.c
        user/sbin/halt/halt.c
        user/sbin/mksfs/disk.c
        user/sbin/mksfs/disk.h
        user/sbin/mksfs/mksfs.c
        user/sbin/mksfs/support.c
        user/sbin/mksfs/support.h
        user/sbin/poweroff/poweroff.c
        user/sbin/reboot/reboot.c
        user/sbin/sfsck/sfsck.c
        user/testbin/add/add.c
        user/testbin/argtest/argtest.c
        user/testbin/badcall/bad_chdir.c
        user/testbin/badcall/bad_close.c
        user/testbin/badcall/bad_dup2.c
        user/testbin/badcall/bad_execv.c
        user/testbin/badcall/bad_fsync.c
        user/testbin/badcall/bad_ftruncate.c
        user/testbin/badcall/bad_getcwd.c
        user/testbin/badcall/bad_getdirentry.c
        user/testbin/badcall/bad_ioctl.c
        user/testbin/badcall/bad_link.c
        user/testbin/badcall/bad_lseek.c
        user/testbin/badcall/bad_mkdir.c
        user/testbin/badcall/bad_open.c
        user/testbin/badcall/bad_pipe.c
        user/testbin/badcall/bad_read.c
        user/testbin/badcall/bad_readlink.c
        user/testbin/badcall/bad_reboot.c
        user/testbin/badcall/bad_remove.c
        user/testbin/badcall/bad_rename.c
        user/testbin/badcall/bad_rmdir.c
        user/testbin/badcall/bad_sbrk.c
        user/testbin/badcall/bad_stat.c
        user/testbin/badcall/bad_symlink.c
        user/testbin/badcall/bad_time.c
        user/testbin/badcall/bad_waitpid.c
        user/testbin/badcall/bad_write.c
        user/testbin/badcall/common_buf.c
        user/testbin/badcall/common_fds.c
        user/testbin/badcall/common_path.c
        user/testbin/badcall/config.h
        user/testbin/badcall/driver.c
        user/testbin/badcall/test.h
        user/testbin/bigfile/bigfile.c
        user/testbin/conman/conman.c
        user/testbin/crash/crash.c
        user/testbin/ctest/ctest.c
        user/testbin/dirconc/dirconc.c
        user/testbin/dirseek/dirseek.c
        user/testbin/dirtest/dirtest.c
        user/testbin/f_test/f_hdr.h
        user/testbin/f_test/f_read.c
        user/testbin/f_test/f_test.c
        user/testbin/f_test/f_write.c
        user/testbin/farm/farm.c
        user/testbin/faulter/faulter.c
        user/testbin/filetest/filetest.c
        user/testbin/forkbomb/forkbomb.c
        user/testbin/forktest/forktest.c
        user/testbin/guzzle/guzzle.c
        user/testbin/hash/hash.c
        user/testbin/hog/hog.c
        user/testbin/huge/huge.c
        user/testbin/kitchen/kitchen.c
        user/testbin/malloctest/malloctest.c
        user/testbin/matmult/matmult-orig.c
        user/testbin/matmult/matmult.c
        user/testbin/palin/palin.c
        user/testbin/parallelvm/parallelvm.c
        user/testbin/psort/psort.c
        user/testbin/randcall/calls.c
        user/testbin/randcall/extern.h
        user/testbin/randcall/main.c
        user/testbin/rmdirtest/rmdirtest.c
        user/testbin/rmtest/rmtest.c
        user/testbin/sink/sink.c
        user/testbin/sort/sort.c
        user/testbin/sty/sty.c
        user/testbin/tail/tail.c
        user/testbin/tictac/tictac.c
        user/testbin/triplehuge/triple.c
        user/testbin/triplehuge/triple.h
        user/testbin/triplehuge/triplehuge.c
        user/testbin/triplemat/triple.c
        user/testbin/triplemat/triple.h
        user/testbin/triplemat/triplemat.c
        user/testbin/triplesort/triple.c
        user/testbin/triplesort/triple.h
        user/testbin/triplesort/triplesort.c
        user/testbin/userthreads/userthreads.c
        user/testbin/zero/zero.c
        user/uw-testbin/argtest/argtest.c
        user/uw-testbin/argtesttest/argtesttest.c
        user/uw-testbin/conc-io/conc-io.c
        user/uw-testbin/exec-sparse/exec-sparse.c
        user/uw-testbin/files1/files1.c
        user/uw-testbin/files2/files2.c
        user/uw-testbin/hogparty/hogparty.c
        user/uw-testbin/lib/testutils.c
        user/uw-testbin/lib/testutils.h
        user/uw-testbin/onefork/onefork.c
        user/uw-testbin/pidcheck/pidcheck.c
        user/uw-testbin/romemwrite/romemwrite.c
        user/uw-testbin/segments/segments.c
        user/uw-testbin/sparse/sparse.c
        user/uw-testbin/syscall/syscall.c
        user/uw-testbin/tlbfaulter/tlbfaulter.c
        user/uw-testbin/vm-crash1/vm-crash1.c
        user/uw-testbin/vm-crash2/vm-crash2.c
        user/uw-testbin/vm-crash3/vm-crash3.c
        user/uw-testbin/vm-data1/vm-data1.c
        user/uw-testbin/vm-data2/vm-data2.c
        user/uw-testbin/vm-data3/vm-data3.c
        user/uw-testbin/vm-funcs/vm-funcs.c
        user/uw-testbin/vm-mix1/vm-mix1.c
        user/uw-testbin/vm-mix1-exec/vm-mix1-exec.c
        user/uw-testbin/vm-mix1-fork/vm-mix1-fork.c
        user/uw-testbin/vm-mix2/vm-mix2.c
        user/uw-testbin/vm-stack1/vm-stack1.c
        user/uw-testbin/vm-stack2/vm-stack2.c
        user/uw-testbin/vm-stackgrow/vm-stackgrow.c
        user/uw-testbin/widefork/widefork.c
        user/uw-testbin/writeread/writeread.c
        user/uw-testbin/xhog/xhog.c
        user/uw-testbin/yhog/yhog.c
        user/uw-testbin/zhog/zhog.c)
